[package]
name = "mra_parser"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = "1"
[build-dependencies]
lalrpop = "0.19.7"
