[package]
name = "mra_parser"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = "1"
reqwest = "0.11.11"
tempdir = "0.3.7"
tokio = { version = "1.20.1", features = ["full"] }
[build-dependencies]
lalrpop = "0.19.7"
